--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A restfull instant messaging service.",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "nodemon index -L",
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
@@ -18,12 +18,17 @@
   },
   "homepage": "https://github.com/asfandahmed/Messaging-service#readme",
   "dependencies": {
+    "mongoose": "^5.0.12",
     "redis": "^2.8.0",
     "restify": "^6.3.4"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
+    "nodemon": "^1.17.3",
     "sinon": "^4.5.0"
+  },
+  "nodemonConfig": {
+    "ignore": ["test/*", "node_modules/*"]
   }
 }
